# v4l2ucp-qt5

./: .gitignore  CMakeLists.txt  README  TODO  mainWindow.cpp  mainWindow.h  v4l2controls.h  v4l2ucp-desktop.sh  v4l2ucp-qt4.pro  v4l2ucp.cpp  v4l2ucp.desktop
src/: CMakeLists.txt  mainWindow.cpp  mainWindow.h  previewSettings.cpp  previewSettings.h  previewSettings.ui  v4l2controls.cpp  v4l2controls.h  v4l2ctrl.c  v4l2ucp.cpp  v4l2ucp.qrc
